<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="horizontal"
    tools:context=".Re3ahhuActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/black"
        android:columnCount="5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meblue"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/re3_2"
            android:textAllCaps="false"
            android:textColor="@color/meyellow"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="@string/messpunkt"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="@string/vmax"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="@string/ausrollen"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="@string/bemerk"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="@string/AH"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <ImageView
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:contentDescription="@string/mess_title"
            android:padding="3dp"
            android:src="@drawable/watch_24_blue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="100"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="@string/nausrollen"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="@string/ausfahrgeschw"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="@string/AHAR"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <ImageView
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:contentDescription="@string/mess_title"
            android:padding="3dp"
            android:src="@drawable/watch_24_blue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="130"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="km 162,4"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="@string/ausfahrgeschw"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="@string/AWI"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text=""
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="110"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="@string/nausrollen"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="@string/ausfahrgeschw"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="@string/ALBG"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <ImageView
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:contentDescription="@string/mess_title"
            android:padding="3dp"
            android:src="@drawable/watch_24_blue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="140"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="km 126,6"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text=""
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="@string/ABIL"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text=""
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="150"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="@string/vmax"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="@string/ausfahrgeschw"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="@string/ABVS"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text=""
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="125"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="km 104,0"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="@string/sbk70"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text="@string/HU"
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />

        <ImageView
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:contentDescription="@string/mess_title"
            android:padding="3dp"
            android:src="@drawable/watch_24_blue" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="3"
            android:layout_gravity="fill"
            android:layout_margin="2dp"
            android:background="@color/meyellow"
            android:padding="3dp"
            android:text=""
            android:textAllCaps="false"
            android:textColor="@color/meblue"
            android:textSize="12sp" />
    </GridLayout>
</ScrollView>